kubernetes/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: mc-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: acr-auth
      containers:
        - name: frontend-container
          image: acrmembershipconnect.azurecr.io/frontend-image:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: mc-namespace
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
