kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mc-ingress
  namespace: mc-namespace
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: 'web'
spec:
  ingressClassName: traefik
  rules:
    - host: localhost
      http:
        paths:
          - path: /Memberships
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
          - path: /swagger
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
